package com.mx.ed;

public interface FlyBehavior {
	public void fly();
}
