package com.mx.ed;

public class Quack implements QuackBehavior {
	public void quack() {
		System.out.println("Quack");
	}
}
