package com.mx.ed;

public interface QuackBehavior {
	public void quack();
}
